# BuggyRace

./: README.md  buggy_race_install.bash
foxglove/: camera_view.json  install_foxglove.bash
src/line_follower/: package.xml  setup.py
src/line_follower/line_follower/: line_detector.py  line_follower.py
src/synapse_msgs/: CMakeLists.txt
src/virtual_world/: CMakeLists.txt  package.xml
src/virtual_world/env-hooks/: virtual_world.dsv.in
src/virtual_world/launch/: degub.launch.py  robot_car_bringup.launch.py
src/virtual_world/sdf/buggy/: model.sdf
src/virtual_world/sdf/worlds/tracks/: track1_s200.dae  track1_s400.dae
src/virtual_world/sdf/worlds/virtual_world/: virtual_world.sdf  virtual_world2.sdf  virtual_world3.sdf
src/virtual_world/urdf/: buggy.urdf
src/virtual_world/urdf/base_file/: robot.sdf  robot.urdf  robot.urdf.xacro
