<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>line_follower</name>
  <version>0.0.0</version>
  <description>ROS 2 package for a line-following robot using computer vision and edge detection.</description>
  <maintainer email="saikr2005@gmail.com">sai</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>  <!-- ROS 2 Python client library -->
  <depend>sensor_msgs</depend>  <!-- For CompressedImage -->
  <depend>geometry_msgs</depend>  <!-- For Twist -->
  <depend>synapse_msgs</depend>  <!-- For EdgeVectors -->
  <depend>cv_bridge</depend>  <!-- OpenCV bridge for ROS -->
  <exec_depend>python3-opencv</exec_depend>  <!-- OpenCV Python bindings -->
  <exec_depend>python3-numpy</exec_depend>  <!-- NumPy Python library -->

  <!-- Testing dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Export -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

